SERVER-61945 Refresh temp resharding ns during collection cloning.